# rust_fractals

./: .gitignore  Cargo.toml  LICENSE  README.md
rust_fractals/: Cargo.toml
rust_fractals/src/: colour.rs  fractals.rs  main.rs
src/: colour.rs  main.rs
